--- a/addons/billtracker.html
+++ b/addons/billtracker.html
@@ -11,8 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-                <div class="addonimages">
-            <img src="images/addonimages/home.jpg" alt="homeplanning" style="width: 95%">
+        <div class="addonimages">
+            <img src="images/addonimages/bills.jpg" alt="bills" style="width: 95%">
         </div>
     </body>
 </html>
