--- a/addons/budgetplanning.html
+++ b/addons/budgetplanning.html
@@ -11,6 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>budget planning is cool</div>
+        <div class="addonimages">
+            <img src="images/addonimages/budget.jpg" alt="homeplanning" style="width: 95%">
+        </div>
     </body>
 </html>
