--- a/addons/todo.html
+++ b/addons/todo.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
                 <div class="addonimages">
-            <img src="images/addonimages/home.jpg" alt="homeplanning" style="width: 95%">
+            <img src="images/addonimages/todo.jpg" alt="homeplanning" style="width: 95%">
         </div>
     </body>
 </html>
