--- a/questions/general.html
+++ b/questions/general.html
@@ -6,11 +6,40 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <link rel="stylesheet" href="../plumstylesheet.css" type="text/css"/>
+
+
+
+        <title>General Questions</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
     </head>
     <body>
-        <div>TODO write content</div>
+
+
+        <a href="#processingtime" data-toggle="collapse" class="faqquestions">Q: What is your current processing time?</a>
+        <div id="processingtime" class='hiddenanswer'>
+            <div>A: Our current processing time for all orders is 5-7 days. Thank you for your patience as we are working as quickly as possible during this busy new year season to create your custom order. Once your order has shipped, we will send you an email with your tracking information.
+
+            </div>
+        </div> 
+
+        <br/>
+      
+
+        <a href="#wrongorder" data-toggle="collapse"  class="faqquestions">Q: I received the wrong order or my order was damaged. What can you do?
+
+        </a>
+        <div id="wrongorder" class='hiddenanswer'>
+            <div>A: We would never leave you with an incorrect or damaged product. Each item is handmade right here in our San Diego office by our wonderful staff. While we strive to make each product perfect, if the error or damage was made on our part, please contact us right away. Just give us your order number and what is wrong with your order. We will be sure to fix the problem right away.
+
+                Unfortunately, if the error was NOT made on our part (misspelled name, wrong monogram, wrong color), we are not able to send a replacement or refund.</div>
+
+        </div> 
+
+
     </body>
 </html>
