--- a/questions/account.html
+++ b/questions/account.html
@@ -20,25 +20,14 @@ and open the template in the editor.
     <body>
 
 
-        <a href="#returnpolicy" data-toggle="collapse" class="faqquestions">Q: What is your return policy?</a>
+        <a href="#returnpolicy" data-toggle="collapse" class="faqquestions">Please click below for our ordering tutorial</a>
         <div id="returnpolicy" class='hiddenanswer'>
-            <div>A: We are not able to accept returns on custom items. If there is an error or damage on our part, please email us right away so we can remedy the problem.
-
+            <div>
+                <img src=""
             </div>
         </div> 
 
-        <br/>
-        
 
-        <a href="#wrongorder" data-toggle="collapse"  class="faqquestions">Q: I received the wrong order or my order was damaged. What can you do?
-
-        </a>
-        <div id="wrongorder" class='hiddenanswer'>
-            <div>A: We would never leave you with an incorrect or damaged product. Each item is handmade right here in our San Diego office by our wonderful staff. While we strive to make each product perfect, if the error or damage was made on our part, please contact us right away. Just give us your order number and what is wrong with your order. We will be sure to fix the problem right away.
-
-                Unfortunately, if the error was NOT made on our part (misspelled name, wrong monogram, wrong color), we are not able to send a replacement or refund.</div>
-
-        </div> 
 
 
     </body>
