--- a/questions/pending.html
+++ b/questions/pending.html
@@ -20,26 +20,47 @@ and open the template in the editor.
     <body>
 
 
-        <a href="#returnpolicy" data-toggle="collapse" class="faqquestions">Q: What is your return policy?</a>
-        <div id="returnpolicy" class='hiddenanswer'>
-            <div>A: We are not able to accept returns on custom items. If there is an error or damage on our part, please email us right away so we can remedy the problem.
-
-            </div>
-        </div> 
-
-        <br/>
-      
-
-        <a href="#wrongorder" data-toggle="collapse"  class="faqquestions">Q: I received the wrong order or my order was damaged. What can you do?
-
+        <a href="#phonenumber" data-toggle="collapse"  class="faqquestions">
+            Q: I would love to talk with someone over the phone. Can I call your office?
         </a>
-        <div id="wrongorder" class='hiddenanswer'>
-            <div>A: We would never leave you with an incorrect or damaged product. Each item is handmade right here in our San Diego office by our wonderful staff. While we strive to make each product perfect, if the error or damage was made on our part, please contact us right away. Just give us your order number and what is wrong with your order. We will be sure to fix the problem right away.
+        <div id="phonenumber" class='hiddenanswer'>
+            <div>
+                A: Email is the best way to get all of your questions answered, but if you need to speak with someone, our number is (760) 842-1085.
+            </div> 
+        </div>
 
-                Unfortunately, if the error was NOT made on our part (misspelled name, wrong monogram, wrong color), we are not able to send a replacement or refund.</div>
+        <br>
 
-        </div> 
+        <a href="#changeorder" data-toggle="collapse"  class="faqquestions">
+            Q: After my order has been placed, can I change my order?
+        </a>
+        <div id="changeorder" class='hiddenanswer'>
+            <div>
+                A: There is a chance we can make a change to your order if you contact us within a reasonable time frame. Just simply send us an email to see if it is possible. We will always do our best to accommodate your requests. If your product is already too far along in production, certain requests may not be possible to change.            </div> 
+        </div>
 
+        <br>        
+
+        <a href="#rushorder" data-toggle="collapse"  class="faqquestions">
+            Q. Can my planner order be rushed?
+        </a>
+        <div id="rushorder" class='hiddenanswer'>
+            <div>
+                A: Because each planner is hand made to your customization, we are not able to rush any orders. We are always working our hardest to get your order out to you as soon as possible. Most of the time, we are able to get them out before the estimated ship date on your order.
+            </div>
+        </div>
+
+        <br>  
+
+        <a href="#makeplanner" data-toggle="collapse"  class="faqquestions">
+            Q: How long will it take to make my planner?
+        </a>
+        <div id="makeplanner" class='hiddenanswer'>
+            <div>
+                A: Our processing time varies due to the season your order is placed. Our current processing time is about 5-7 days.            </div>
+        </div>
+
+        <br> 
 
     </body>
 </html>
