--- a/questions/placing.html
+++ b/questions/placing.html
@@ -20,25 +20,41 @@ and open the template in the editor.
     <body>
 
 
-        <a href="#returnpolicy" data-toggle="collapse" class="faqquestions">Q: What is your return policy?</a>
+        <a href="#returnpolicy" data-toggle="collapse" class="faqquestions">Q: Can I change the colors of any pattern design?</a>
         <div id="returnpolicy" class='hiddenanswer'>
-            <div>A: We are not able to accept returns on custom items. If there is an error or damage on our part, please email us right away so we can remedy the problem.
-
+            <div>
+                A: We can change the colors of any of our cover designs. Just specify the colors you would like in the notes section of your order.
             </div>
         </div> 
 
         <br>
 
-        <a href="#wrongorder" data-toggle="collapse"  class="faqquestions">Q: I received the wrong order or my order was damaged. What can you do?
+        <a href="#wrongorder" data-toggle="collapse"  class="faqquestions">Q: Can a monogram be added to any cover design? 
 
         </a>
         <div id="wrongorder" class='hiddenanswer'>
-            <div>A: We would never leave you with an incorrect or damaged product. Each item is handmade right here in our San Diego office by our wonderful staff. While we strive to make each product perfect, if the error or damage was made on our part, please contact us right away. Just give us your order number and what is wrong with your order. We will be sure to fix the problem right away.
+            <div>
+                A: We can add a monogram to any of our cover designs.
 
-                Unfortunately, if the error was NOT made on our part (misspelled name, wrong monogram, wrong color), we are not able to send a replacement or refund.</div>
+            </div> 
+        </div>
 
+        <br>
+
+        <a href="#makeplanner" data-toggle="collapse" class="faqquestions">Q: Can a photo be added to any cover design?</a>
+
+        <div id="makeplanner" class='hiddenanswer'>
+            <div>A: We can add a photo to any of our cover designs. Just upload your photo when placing your order. Please be sure your photo is a high quality image that will print clearly for your cover.
+            </div>
         </div> 
 
+        <br>
 
+        <a href="#rushorder" data-toggle="collapse"  class="faqquestions">Q: Can I share my pictures of my Plum Paper Planner with you?
+        </a>
+        <div id="rushorder" class='hiddenanswer'>
+            <div>A: We love to see how our customers are using our products! Tag us on Instagram at @plumpaper and #plumpaper. You can always send us an email with your picture to hello@plumpaper.com. We would love to share your pictures on our site!
+            </div> 
+        </div>
     </body>
 </html>
