--- a/questions/returns.html
+++ b/questions/returns.html
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 
 
-        <title>Returns</title>
+        <title>Pending Orders</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -26,19 +26,19 @@ and open the template in the editor.
 
             </div>
         </div> 
-        
-        <br>
-        
-        <a href="#wrongorder" data-toggle="collapse"  class="faqquestions">Q: I received the wrong order or my order was damaged. What can you do?
+
+        <br/>
+
+
+        <a href="#cancelpolicy" data-toggle="collapse"  class="faqquestions">
+            Q: What is your cancellation policy? 
 
         </a>
-        <div id="wrongorder" class='hiddenanswer'>
-            <div>A: We would never leave you with an incorrect or damaged product. Each item is handmade right here in our San Diego office by our wonderful staff. While we strive to make each product perfect, if the error or damage was made on our part, please contact us right away. Just give us your order number and what is wrong with your order. We will be sure to fix the problem right away.
-
-                Unfortunately, if the error was NOT made on our part (misspelled name, wrong monogram, wrong color), we are not able to send a replacement or refund.</div>
-
-        </div> 
-
+        <div id="cancelpolicy" class='hiddenanswer'>
+            <div>
+                A: All custom orders must be canceled within 24 hours. Once 24 hours has passed, we are no longer able to cancel a custom order.
+            </div> 
+        </div>
 
     </body>
 </html>
