--- a/questions/shipping.html
+++ b/questions/shipping.html
@@ -17,29 +17,93 @@ and open the template in the editor.
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     </head>
+
     <body>
 
-
-        <a href="#returnpolicy" data-toggle="collapse" class="faqquestions">Q: What is your return policy?</a>
-        <div id="returnpolicy" class='hiddenanswer'>
-            <div>A: We are not able to accept returns on custom items. If there is an error or damage on our part, please email us right away so we can remedy the problem.
-
-            </div>
+        <a href="#shipmethod" data-toggle="collapse" class="faqquestions">
+            Q: What method is used to ship my package?        
+        </a>
+        <div id="shipmethod" class='hiddenanswer'>
+            <div>
+                A: If you select Standard Shipping as your shipping option, your package will be shipped via UPS Mail Innovations. This means that your package is transported to your home town via UPS. Once it arrives in your home town, it will be transferred to your local post office for the final delivery to you. The transit time for this method is 3-8 BUSINESS days. If you select Priority Shipping as your shipping option, your package will be shipped via USPS Priority Mail. The transit time for this method is 2-3 BUSINESS days.            </div>
         </div> 
 
-        <br/>
+        <br>
 
+        <a href="#wrongaddress" data-toggle="collapse" class="faqquestions">
 
-        <a href="#wrongorder" data-toggle="collapse"  class="faqquestions">Q: I received the wrong order or my order was damaged. What can you do?
+            Q: I provided the incorrect address and my package was returned to you. What is your policy?         
 
         </a>
-        <div id="wrongorder" class='hiddenanswer'>
-            <div>A: We would never leave you with an incorrect or damaged product. Each item is handmade right here in our San Diego office by our wonderful staff. While we strive to make each product perfect, if the error or damage was made on our part, please contact us right away. Just give us your order number and what is wrong with your order. We will be sure to fix the problem right away.
 
-                Unfortunately, if the error was NOT made on our part (misspelled name, wrong monogram, wrong color), we are not able to send a replacement or refund.</div>
+        <div id="wrongaddress" class='hiddenanswer'>
+            <div>
 
-        </div> 
+                A: Please double check your SHIPPING ADDRESS when checking out. Plum Paper is not responsible for additional shipping charges for packages that are returned to us due to incorrect shipping names or addresses. Plum Paper is not responsible if a forwarding address is not honored, but is returned to us instead.        
 
+            </div> 
+        </div>
+        <br>
 
+        <a href="#shipbox" data-toggle="collapse" class="faqquestions">
+
+            Q: How are your products shipped?         
+        </a>
+
+        <div id="shipbox" class='hiddenanswer'>
+            <div>
+
+                A: The planners and notebooks are shipped in a durable box. We offer standard shipping and express shipping. Standard shipping is through UPS Mail Innovations and takes approximately 3-8 BUSINESS days to arrive depending on your location in the US. International shipping can take approximately 10-15 BUSINESS days to arrive.            
+            </div> 
+        </div>
+
+        <br>
+
+        <a href="#trackingupdate" data-toggle="collapse" class="faqquestions">
+
+            Q: My online tracking information is not updating. What can you do?
+        </a>
+
+        <div id="trackingupdate" class='hiddenanswer'>
+            <div>
+
+                A: Sometimes the online tracking can be slow to update. Please be patient as the online tracking is out of our control and we see the same information online that you see. We will always be sure you receive your planner.            
+            </div> 
+        </div>
+
+        <br>     
+
+        <a href="#shipcountries" data-toggle="collapse" class="faqquestions">
+
+            Q: What countries do you ship to?        
+
+        </a>
+
+        <div id="shipcountries" class='hiddenanswer'>
+            <div>
+
+                A: We ship to the following countries: United States, Canada, Great Britain, Germany, France, Italy, Spain, Australia, New Zealand ,Singapore, Belgium, Denmark ,Finland, Netherlands, Sweden, Switzerland, Ireland, Israel, Portugal, Croatia, Estonia, Gibraltar, Hungary, Latvia, Lithuania, Luxembourg, Malaysia, and Malta            </div> 
+        </div>
+        <br>         
+
+        <a href="#intlship" data-toggle="collapse" class="faqquestions">
+
+Q: I am shipping internationally. Is there anything I need to know? 
+
+        </a>
+
+        <div id="intlship" class='hiddenanswer'>
+            <div>
+
+A: The recipient of an international shipment may be subject to customs brokerage fees, import duties, and taxes after the shipment reaches the destination country. Additional charges are the responsibility of the recipient because we have no control over these government-imposed charges and cannot determine what they may be. Customs policies vary greatly among countries. Please contact your local customs office for information.
+<br><br>
+To avoid a delay in receiving your order from customs, consider the following: 
+<br><br>
+- Please do not refuse a shipment or ignore requests from carriers regarding duty and/or tax liability charges. Be aware that most carriers will hold a shipment for 5 days after arrival in your country before they return it to the sender.
+<br>
+- We do not refund original shipping charges for goods that are refused for delivery at customs.
+            </div>
+            </div>
+        <br> 
     </body>
 </html>
