--- a/questions/account.html
+++ b/questions/account.html
@@ -23,7 +23,8 @@ and open the template in the editor.
         <a href="#returnpolicy" data-toggle="collapse" class="faqquestions">Please click below for our ordering tutorial</a>
         <div id="returnpolicy" class='hiddenanswer'>
             <div>
-                <img src=""
+                <img src="images/cat.gif" alt="cat placeholder" id="cat">
+                <p id="catcaption">THE STRUGGLE IS REAL</p>
             </div>
         </div> 
 
